clang/test/BSC/Negative/Ownership/RuleCheck/mut_borrow_owned_var/mut_borrow_owned_var.cbs
// RUN: %clang_cc1 -verify %s

typedef struct {
  int *_Owned a;
  int *_Owned b;
} S;

typedef struct {
  int a;
  int b;
} U;

void foo1(int *_Owned *_Borrow p);
void foo2(S *_Owned *_Borrow p);
void foo3(S *_Borrow p);
void foo4(U *_Owned *_Borrow p);
void foo5(U *_Borrow p);

void consume(int *_Owned p);

_Safe void safe_generic_consume<T>(T *_Owned _Nullable);

void test1() {
  int *_Owned p = nullptr;
  foo1(&_Mut p);
} // expected-error {{memory leak of value: `p`}}

void test2() {
  int *_Owned p = nullptr;
  int *_Owned *_Borrow q = &_Mut p;
  foo1(q);
} // expected-error {{memory leak of value: `p`}}

void test3() {
  S *_Owned p = nullptr;
  foo2(&_Mut p);
} // expected-error {{memory leak of value: `p`}}
// expected-error@-1 {{field memory leak of value: `p`, p.a, p.b are leak}}

void test4() {
  S s;
  foo3(&_Mut s); // expected-error {{use of partially moved value: `s`, s.a, s.b are moved}}
}

void test5(S *_Owned p) {
  foo2(&_Mut p);
} // expected-error {{memory leak of value: `p`}}
  // expected-error@-1 {{field memory leak of value: `p`, p.a, p.b are leak}}

void test6(S *_Owned p) {
  int *_Owned q = p->a;
  consume(q);
  foo2(&_Mut p); // expected-error {{use of partially moved value: `p`, p.a is moved}}
} // expected-error {{memory leak of value: `p`}}
  // expected-error@-1 {{field memory leak of value: `p`, p.b is leak}}

void test7(U *_Owned p) {
  foo4(&_Mut p);
} // expected-error {{memory leak of value: `p`}}

void test8() {
  U *_Owned sp = nullptr;
  foo4(&_Mut sp);
} // expected-error {{memory leak of value: `sp`}}

void test9() {
  U u;
  foo5(&_Mut u);
}

void test10(int *_Owned p) {
  S s;
  s.a = p;
  foo3(&_Mut s); // expected-error {{use of partially moved value: `s`, s.b is moved}}
} // expected-error {{field memory leak of value: `s`, s.a is leak}}

void test11(int *_Owned p, int *_Owned q) {
  S s;
  s.a = p;
  s.b = q;
  foo3(&_Mut s);
} // expected-error {{field memory leak of value: `s`, s.a, s.b are leak}}

void test12(int *_Owned p, int *_Owned q) {
  S s;
  s.a = p;
  s.b = q;
  if (s.a == nullptr) {
    foo3(&_Mut s);
    s.a = nullptr; // expected-error {{assign to part of _Owned value: `s.a`}}
  }
} // expected-error {{field memory leak of value: `s`, s.b, s.a are leak}}

void test13(int *_Owned p, int *_Owned q) {
  S s;
  s.a = p;
  s.b = q;
  if (s.a == nullptr) {
    foo3(&_Mut s);
    return; // expected-error {{field memory leak of value: `s`, s.b, s.a are leak}}
  }
} // expected-error {{field memory leak of value: `s`, s.a, s.b are leak}}

void test14(int *_Owned p) {
  S s;
  s.a = p;
  if (s.a == nullptr) {
    foo3(&_Mut s); // expected-error {{use of partially moved value: `s`, s.a, s.b are moved}}
  }
} // expected-error {{field memory leak of value: `s`, s.a is leak}}

void test15(int *_Owned q) {
  int *_Owned p = q;
  while (p != nullptr) {
    foo1(&_Mut p);
  }
}

_Safe void test16(void) {
    S *_Owned _Nullable p = nullptr;
    S *_Owned _Nullable *_Borrow q = &_Mut p;
    safe_generic_consume(p);
}

struct S2 {
  int *_Owned _Nullable a;
  int *_Owned _Nullable b;
};

_Safe T *_Owned _Nullable make_owned<T>(T);

_Safe void test17(int *_Owned val) {
  struct S2 s;
  s.a = val;
  s.b = nullptr;
  struct S2 *_Owned _Nullable sp = make_owned(s);
  struct S2 *_Owned _Nullable *_Borrow spb = &_Mut sp;
  safe_generic_consume(sp);
}